Attempt overflow-x fix to globals

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
 body {
   color: white;
   background: black;
+  overflow-x: hidden;
 }
 
 /* SCROLLBAR PRESETS */
